agregando sistema de turnos

--- a/App.html
+++ b/App.html
@@ -35,7 +35,23 @@
 				</header>
 
 			<!-- Main -->
-			
+            <div class="">
+                <h1>Tu Turno</h1>
+                <div id="static-turn">
+                </div>
+            </div>
+            <div class="">
+                <h2>Turno en Vivo</h2>
+                <div id="live-turn">
+                </div>
+            </div>
+            <p>
+                No te procupes <br/>
+                Te avisaremos cuando tu turno se aproxime, <b>recuerda tener tus notificaciones activadas.</b><br/>
+                <i>Se responsable y atiende tu turno cuando te corresponda.</i>
+            </p>
+            <div>Registration closes in <span id="time"></span> minutes!</div>
+
 		</div>
 
 		<!-- Scripts -->
@@ -47,6 +63,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+            <script src="assets/js/script.js"></script>
 
 	</body>
 </html>
