estilos al boton

--- a/App.html
+++ b/App.html
@@ -37,7 +37,7 @@
 				</header>
 			<!-- Main -->
             <div id='holo' style='display:block;'>
-                <button type="button" name="button" onclick="turn(), mostrar(), ocultar()" >Dame mi turno</button>
+                <button type="button" name="button" onclick="turn(), mostrar(), ocultar()" id="superboton"><span id="estilo">Dame mi turno</span></button>
             </div>
             <div id='oculto' style='display:none;'>
                 <div class="generaldiv">
