--- a/App.html
+++ b/App.html
@@ -15,12 +15,12 @@
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-        <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <!-- Acción sobre el botó con id=boton y actualizamos el div con id=capa -->
         <script type="text/javascript">
             $(document).ready(function() {
                 $("#superboton").click(function(event) {
-                    $("#live-turn").load('/admintool.html #generalturn');
+                    $("#liveturn").load('/https://tuturno-javico.c9users.io/adminntool.html #generaldiv');
                 });
             });
         </script>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="">
                         <h1>Turno en Vivo</h1>
-                        <div id="live-turn">
+                        <div id="liveturn">
                         </div>
                     </div>
                     <button type="button" name="button" onclick="()" id="superboton"><span id="estilo">Prueba</span></button>
@@ -82,6 +82,5 @@
 			<script src="assets/js/main.js"></script>
             <script src="assets/js/script.js"></script>
             <script src="assets/js/turnscript.js"></script>
-
 	</body>
 </html>
