--- a/admintool.html
+++ b/admintool.html
@@ -74,6 +74,7 @@
 			  firebase.initializeApp(config);
 			</script>
             <script src="assets/js/turnscript.js"></script>
+            <script> onload(); </script>
 
 	</body>
 </html>
