depurar esto pls

--- a/App.html
+++ b/App.html
@@ -36,11 +36,13 @@
 					</nav>
 				</header>
 			<!-- Main -->
-            <div id='holo' style='display:block;'>
+            <div id='boton' style='display:none;'>
                 <button type="button" name="button" onclick="app()"><span id="estilo">Dame mi turno</span></button>
             </div>
-            <div id='oculto' style='display:block;'>
+            <div id='post' style='display:none;'>
                 <div class="generaldiv">
+                	<div class="anuncio">
+                	</div>
                     <div class="">
                         <h3>Tu Turno</h3>
                         <div id="staticturn">
