el sistema de turnos (depurar) ; agragando style

--- a/admintool.html
+++ b/admintool.html
@@ -42,11 +42,17 @@
                     </div>
                     <div>Turnos inician en <span id="time"></span></div>
                 </div>
-                <h1>El turno del usuario es:</h1>
-                <h2><span id="userturn"></span></h2>
                 <button type="button" name="button" onclick="iniciar()" id="superboton"><span id="estilo">Iniciar</span></button>
                 <button type="button" name="button" onclick="stop(), reload()" id="superboton"><span id="estilo">Stop</span></button>
                 <button type="button" name="button" onclick="continuar()" id="superboton"><span id="estilo">Continuar</span></button>
+                 <h1>El turno del usuario es:</h1>
+                <h2><span id="userturn"></span></h2>
+                <h1>notificar cuando falten:</h1>
+                <h2><span id="notification"></span></h2>
+                <h1> y cuando falten:</h1>
+                <h2><span id="notification_dos"></span></h2>
+                <h1>Faltan:</h1>
+                <h2><span id="falta"></span></h2>
             </div>
 		</div>
 
