--- a/App.html
+++ b/App.html
@@ -36,27 +36,34 @@
 					</nav>
 				</header>
 			<!-- Main -->
+			<div id='not' style='display:none;'>
+				<h1><span id="notyet">El servicio no está disponible.</span></h1>
+          	</div>
             <div id='boton' style='display:none;'>
-                <button type="button" name="button" onclick="app()"><span id="estilo">Dame mi turno</span></button>
+                <button type="button" name="button" onclick="app()" id="superboton"><span id="estilo">Dame mi turno</span></button>
             </div>
             <div id='post' style='display:none;'>
                 <div class="generaldiv">
-                	<div class="anuncio">
-                	</div>
-                    <div class="">
-                        <h3>Tu Turno</h3>
+                
+                    <div id="turnoquieto">
+                        <h3><span id="dentroturno">Tu Turno</span></h3>
                         <div id="staticturn">
                         </div>
                     </div>
                     <div class="">
-                        <h1>Turno en Vivo</h1>
+                        <h1><span id="vivoturno">Turno en Vivo</span></h1>
                         <div id="liveturn">
                         </div>
                     </div>
-                    <p>
+                    <p><span id="comentario" style="display: block;">
                         No te procupes <br/>
                         Te avisaremos cuando tu turno se aproxime, <b>recuerda tener tus notificaciones activadas.</b><br/>
-                        <i>Se responsable y atiende tu turno cuando te corresponda.</i>
+                        <i>Se responsable y atiende tu turno cuando te corresponda.</i></span>
+                        <span id="comentario_dos"></span>
+                        <div id="bonotes_exit" style="display: none;">
+                        	 <button type="button" name="button" onclick="" id="superboton"><span id="estilo">Aceptar turno</span></button>
+               				 <button type="button" name="button" onclick="" id="superboton"><span id="estilo">Cancelar turno</span></button>
+                        </div>
                     </p>
                 </div>
             </div>
