agregando mas style

--- a/user.html
+++ b/user.html
@@ -38,11 +38,11 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 							<section>
-								<p>	<div class="4u  6u(xsmall)"><span class="image left"><img src="images/profile.jpg" alt="" /></span></div>
+								<p>	<div class="4u  6u(xsmall)"><span class="image left"><img src="images/iconuser.png" alt="" /></span></div>
 									<h2>{{usuario.name}}</h2>
 									<h1>User Date Started.</h1>
 									User Info.</p>
-									
+
 										<h3>Registro:</h3>
 								<div class="table-wrapper">
 									<table>
@@ -107,5 +107,17 @@
 					$('body').show();
 				});
 			</script>
+            <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+            	<script>
+			  // Initialize Firebase
+			  var config = {
+			    apiKey: "AIzaSyDKCIZupI3ME9Q3iwycfXpEM_3DtnIpXQY",
+			    authDomain: "tuturno-98d9e.firebaseapp.com",
+			    databaseURL: "https://tuturno-98d9e.firebaseio.com",
+			    storageBucket: "tuturno-98d9e.appspot.com",
+			  };
+			  firebase.initializeApp(config);
+			</script>
+
 	</body>
 </html>
