--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,18 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+            	<script>
+			  // Initialize Firebase
+			  var config = {
+			    apiKey: "AIzaSyDKCIZupI3ME9Q3iwycfXpEM_3DtnIpXQY",
+			    authDomain: "tuturno-98d9e.firebaseapp.com",
+			    databaseURL: "https://tuturno-98d9e.firebaseio.com",
+			    storageBucket: "tuturno-98d9e.appspot.com",
+			  };
+			  firebase.initializeApp(config);
+			</script>
+
 
 	</body>
 </html>
