--- a/index.html
+++ b/index.html
@@ -12,102 +12,109 @@
 		<link rel="shortcut icon" href="images/Logo3.png">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="assets/style.css">
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body class="landing">
-		<div id="page-wrapper">
-			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html"></a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="team.html">Equipo</a></li>
-							<li><a href="contact.html">Contacto</a></li>
-							<li><a href="login.html" class="button special">Pide tu turno</a></li>
-						</ul>
-					</nav>
-				</header>
-			<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h2>TuTurno</h2>
-							<p>Lo pides,<br />
-							Lo tienes.<br /><br /></p>
-							<a href="login.html" class="button special fit small">Pide tu turno</a>
-						</header>
-						<span class="image"><img src="images/Logo(2).png" alt=""/></span>
-					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</section>
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/wall4.png" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>Esperar en la fila</h2>
-							<p>Es cosa del pasado.</p>
-						</header>
-						<p><b>Con TuTurno solo debes presionar un botón y tendras el turno en el establecimiento deseado.</b><br /><br /></p>
-						<h2>Sin complicaciones.</h2>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
-					<div class="container">
-						<div class="box alt">
-							<div class="row uniform">
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Rápido</h3>
-									<p><b>Pedir tu turno no tardará mas de 3 minutos.</b></p>
-								</section>
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
-									<h3>En tiempo real</h3>
-									<p><b>Podrás ver el sistema de turnos en tiempo real.</b></p>
-								</section>
-								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-lock"></span>
-									<h3>Seguro</h3>
-									<p><b>Te aseguramos que nó perderas tu turno.</b></p>
-								</section>
-							</div>
-						</div>
-						<footer class="major">
-						</footer>
-					</div>
-				</section>
-			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>¿Quieres TuTurno en tu establecimiento?</h2>
-							<p>Contáctanos y te ayudaremos</p>
-						</header>
-						<form method="post" action="#" class="container 50%">
-							<div class="row uniform 50%">
-								<ul class="container 50%">
-										<a href="contact.html" class="button special">Contacto</a>
-								</ul>
-							</div>
-						</form>
-					</div>
-				</section>
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Tuturno. Todos los derechos reservados.</li><li>Design: <a href="http://tglassesguy.tumblr.com">Javier Collazos</a></li>
-					</ul>
-				</footer>
-		</div>
+	<body class="">
+            <div class="stickyfloat_element">Faltan 30 turnos</div>
+            <div id="page-wrapper">
+
+    			<!-- Header -->
+    				<header id="header">
+    					<h1 id="logo"><a href="index.html"></a></h1>
+
+    					<nav id="nav">
+    						<ul>
+                                <div class="stickyfloat_element">Faltan 30 turnos</div>
+    							<li><a href="team.html">Equipo</a></li>
+    							<li><a href="contact.html">Contacto</a></li>
+    							<li><a href="login.html" class="button special">Pide tu turno</a></li>
+    						</ul>
+    					</nav>
+    				</header>
+    			<!-- Banner -->
+    				<section id="banner">
+    					<div class="content">
+    						<header>
+    							<h2>TuTurno</h2>
+    							<p>Lo pides,<br />
+    							Lo tienes.<br /><br /></p>
+    							<a href="login.html" class="button special fit small">Pide tu turno</a>
+    						</header>
+    						<span class="image"><img src="images/Logo(2).png" alt=""/></span>
+    					</div>
+    					<a href="#three" class="goto-next scrolly">Next</a>
+    				</section>
+    			<!-- Three -->
+    				<section id="three" class="spotlight style3 left">
+    					<span class="image fit main bottom"><img src="http://i.imgur.com/pd8l4Fk.gif" alt="" /></span>
+    					<div class="content">
+    						<header>
+    							<h2>Esperar en la fila</h2>
+    							<p>Es cosa del pasado.</p>
+    						</header>
+    						<p><b>Con TuTurno solo debes presionar un botón y tendras el turno en el establecimiento deseado.</b><br /><br /></p>
+    						<h2>Sin complicaciones.</h2>
+    					</div>
+    					<a href="#four" class="goto-next scrolly">Next</a>
+    				</section>
+    			<!-- Four -->
+    				<section id="four" class="wrapper style1 special fade-up">
+    					<div class="container">
+    						<div class="box alt">
+    							<div class="row uniform">
+    								<section class="4u 6u$(medium) 12u$(xsmall)">
+    									<span class="icon alt major fa-paper-plane"></span>
+    									<h3>Rápido</h3>
+    									<p><b>Pedir tu turno no tardará mas de 3 minutos.</b></p>
+    								</section>
+    								<section class="4u 6u(medium) 12u$(xsmall)">
+    									<span class="icon alt major fa-area-chart"></span>
+    									<h3>En tiempo real</h3>
+    									<p><b>Podrás ver el sistema de turnos en tiempo real.</b></p>
+    								</section>
+    								<section class="4u$ 6u$(medium) 12u$(xsmall)">
+    									<span class="icon alt major fa-lock"></span>
+    									<h3>Seguro</h3>
+    									<p><b>Te aseguramos que nó perderas tu turno.</b></p>
+    								</section>
+    							</div>
+    						</div>
+    						<footer class="major">
+    						</footer>
+    					</div>
+    				</section>
+    			<!-- Five -->
+
+    				<section id="five" class="wrapper style2 special fade">
+    					<div class="container">
+    						<header>
+    							<h2>¿Quieres TuTurno en tu establecimiento?</h2>
+    							<p>Contáctanos y te ayudaremos</p>
+    						</header>
+    						<form method="post" action="#" class="container 50%">
+    							<div class="row uniform 50%">
+    								<ul class="container 50%">
+    										<a href="contact.html" class="button special">Contacto</a>
+    								</ul>
+    							</div>
+    						</form>
+    					</div>
+    				</section>
+    			<!-- Footer -->
+    				<footer id="footer">
+    					<ul class="icons">
+    						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+    						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+    						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+    					</ul>
+    					<ul class="copyright">
+    						<li>&copy; Tuturno. Todos los derechos reservados.</li><li>Design: <a href="http://tglassesguy.tumblr.com">Javier Collazos</a></li>
+    					</ul>
+    				</footer>
+    		</div>
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -117,5 +124,16 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+            	<script>
+			  // Initialize Firebase
+			  var config = {
+			    apiKey: "AIzaSyDKCIZupI3ME9Q3iwycfXpEM_3DtnIpXQY",
+			    authDomain: "tuturno-98d9e.firebaseapp.com",
+			    databaseURL: "https://tuturno-98d9e.firebaseio.com",
+			    storageBucket: "tuturno-98d9e.appspot.com",
+			  };
+			  firebase.initializeApp(config);
+			</script>
 	</body>
 </html>
