--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
     						</footer>
     					</div>
     				</section>
+
+
+
+				<section id="yeah" class="wrapper style2 special fade">
+					<div class="container">
+						<header>
+							<h2>Entidades afiliadas</h2>
+						</header>
+								<div class="row uniform">
+									<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/con_2_ut.jpg" alt="" /></span></div>
+									<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/con_2_unibague.jpg" alt="" /></span></div>
+									<div class="4u$ 6u(xsmall)"><span class="image fit"><img src="images/con_2_proximamente.jpg" alt="" /></span></div>
+								</div>
+							<div class="espacio">
+							</div>
+					</div>
     			<!-- Five -->
 
     				<section id="five" class="wrapper style2 special fade">
