--- a/user.html
+++ b/user.html
@@ -43,8 +43,8 @@
 							<section>
 								<p>	<div class="4u  6u(xsmall)"><span class="image left"><img src="images/iconuser.png" alt="" /></span></div>
 									<h2>{{usuario.name}}</h2>
-									<h1>User Date Started.</h1>
-									User Info.</p>
+									<h1><img src="images/ut_logo.png" width="25px;" height="35px;"alt="" />&nbsp;&nbsp; Universidad del Tolima.</h1>
+									Estudiante.</p>
 
 										<h3>Registro:</h3>
 								<div class="table-wrapper">
@@ -58,17 +58,17 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Universidad del Tolima</td>
+												<td><img src="images/ut_logo.png" width="25px;" height="35px;"alt="" />&nbsp;&nbsp;  Universidad del Tolima</td>
 												<td>Servicio de restaurante.</td>
 												<td>04/04/16</td>
 											</tr>
 											<tr>
-												<td>Universidad del Tolima</td>
+												<td><img src="images/ut_logo.png" width="25px;" height="35px;"alt="" />&nbsp;&nbsp; Universidad del Tolima</td>
 												<td>Servicio de restaurante.</td>
 												<td>03/04/16</td>
 											</tr>
 											<tr>
-												<td>Universidad del Tolima</td>
+												<td><img src="images/ut_logo.png" width="25px;" height="35px;"alt="" />&nbsp;&nbsp; Universidad del Tolima</td>
 												<td>Servicio de restaurante.</td></td>
 												<td>02/04/16</td>
 											</tr>
